Fix article header, text, add meta
Fix article uneven headers
Fix article and blog justify align
Add meta tags to blogs and articles

--- a/src/app/components/textHeavyBlog/textHeavyBlog.module.css
+++ b/src/app/components/textHeavyBlog/textHeavyBlog.module.css
@@ -23,7 +23,7 @@
 
 .paragraph p {
   margin-bottom: 20px;
-  text-align: justify;
+  text-align: left;
   font-size: var(--Body1);
 }
 
